; ModuleID = '/home/carl/AnghaBench/esp-idf/components/console/linenoise/extr_linenoise.c_refreshLine.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/console/linenoise/extr_linenoise.c_refreshLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linenoiseState = type { i32 }

@mlmode = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.linenoiseState*)* @refreshLine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @refreshLine(%struct.linenoiseState* %0) #0 {
  %2 = alloca %struct.linenoiseState*, align 8
  store %struct.linenoiseState* %0, %struct.linenoiseState** %2, align 8
  %3 = load i64, i64* @mlmode, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load %struct.linenoiseState*, %struct.linenoiseState** %2, align 8
  %7 = call i32 @refreshMultiLine(%struct.linenoiseState* %6)
  br label %11

8:                                                ; preds = %1
  %9 = load %struct.linenoiseState*, %struct.linenoiseState** %2, align 8
  %10 = call i32 @refreshSingleLine(%struct.linenoiseState* %9)
  br label %11

11:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @refreshMultiLine(%struct.linenoiseState*) #1

declare dso_local i32 @refreshSingleLine(%struct.linenoiseState*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
